--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "dependencies": {
-    "@supabase/supabase-js": "^2.21.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "nodemon": "^2.0.22",
-    "joi": "^17.9.0"
-  },
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  }
+    "scripts": {
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js"
+    },
+    "name": "backend",
+    "version": "1.0.0",
+    "main": "index.js",
+    "type": "module",
+    "dependencies": {
+        "@supabase/supabase-js": "^2.21.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "joi": "^17.9.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.21"
+    }
 }
