--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "scripts": {
         "start": "node src/index.js",
-        "dev": "nodemon src/index.js"
+        "dev": "nodemon src/index.js",
+        "test": "mocha src /app.test.js"
     },
     "name": "backend",
     "version": "1.0.0",
@@ -15,6 +16,9 @@
         "joi": "^17.9.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.21"
+        "chai": "^4.3.7",
+        "mocha": "^10.2.0",
+        "nodemon": "^2.0.21",
+        "supertest": "^6.3.3"
     }
 }
