--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,15 +18,24 @@ jobs:
         with:
           node-version: '14' # Esta es la versión de Node para tu proyecto, no para la acción
 
+      - name: Configurar variables de entorno
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+        run: |
+          echo "SUPABASE_URL=${SUPABASE_URL}" >> .env
+          echo "SUPABASE_KEY=${SUPABASE_KEY}" >> .env
+
       - name: Instalar dependencias
-        run: yarn install # Usa 'yarn' en lugar de 'npm' para instalar dependencias
+        run: yarn install
 
       - name: Ejecutar pruebas
-        run: yarn mocha src/app.test.js # Usa 'yarn' en lugar de 'npm' para ejecutar las pruebas
+        run: yarn test
 
       - name: Despliegue del Backend
         run: |
           pm2 restart app.js
+
 
 
         
