--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "joi": "^17.9.0"
+        "joi": "^17.9.0",
+        "nodemailer": "^6.9.7"
     },
     "devDependencies": {
         "chai": "^4.3.7",
