--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "joi": "^17.9.0",
-        "nodemailer": "^6.9.7"
+        "nodemailer": "^6.9.7",
+        "pdfkit": "^0.14.0",
+        "pdfmake": "^0.2.8",
+        "puppeteer": "^21.5.2"
     },
     "devDependencies": {
         "chai": "^4.3.7",
