--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "joi": "^17.9.0",
+        "node-cron": "^3.0.3",
         "nodemailer": "^6.9.7",
         "pdfkit": "^0.14.0",
         "pdfmake": "^0.2.8",
